# hitokoto

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  test.sh
.github/workflows/: test.yml
examples/: count_languages.rs  random_hitokoto.rs
src/: bundles.rs  data.rs  lib.rs  random.rs
