[package]
name = "hitokoto"
version = "0.2.0"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "一言 https://hitokoto.cn/."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/hitokoto/"
documentation = "https://docs.rs/hitokoto/"

[dependencies]
uuid = { version = "^1.11", optional = true, default-features = false }
serde = { version = "^1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
rand = { version = "~0.8", optional = true, default-features = false, features = ["getrandom"] }
bitflags = { version = "^2.7", optional = true, default-features = false }

[build-dependencies]
anyhow = "^1.0"
tokio = { version = "^1.43", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "^1.0", features = ["derive"] }
reqwest = { version = "~0.12", features = ["json"] }
uuid = { version = "^1.11", features = ["serde"] }

[features]
default = ["std", "random"]
std = ["uuid?/std", "serde?/std", "rand?/std", "rand?/std_rng", "bitflags?/std"]
uuid = ["dep:uuid"]
serde = ["dep:serde", "uuid?/serde"]
random = ["dep:rand", "dep:bitflags"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
