[package]
name = "hitokoto"
version = "0.5.1"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "一言 https://hitokoto.cn/."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/hitokoto/"
documentation = "https://docs.rs/hitokoto/"
keywords = ["hitokoto"]

[dependencies]
uuid = { version = "^1.13", optional = true, default-features = false }
serde = { version = "^1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
rand = { version = "~0.9", optional = true, default-features = false, features = ["os_rng", "small_rng"] }
bitflags = { version = "^2.8", optional = true, default-features = false }
chrono = { version = "~0.4", optional = true, default-features = false }
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }

[build-dependencies]
anyhow = "^1.0"
tokio = { version = "^1.43", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "^1.0", features = ["derive"] }
reqwest = { version = "~0.12", features = ["json"] }
uuid = { version = "^1.13", features = ["serde"] }
chrono = "~0.4"
lingua = { version = "^1.6", optional = true }

[features]
default = ["std", "random"]
std = ["uuid?/std", "serde?/std", "rand?/thread_rng", "bitflags?/std", "chrono?/std"]
uuid = ["dep:uuid"]
serde = ["dep:serde", "uuid?/serde", "chrono?/serde"]
random = ["dep:rand", "dep:bitflags"]
time = ["dep:chrono"]
language = ["dep:lingua"]
wasm = ["dep:getrandom"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
