[package]
name = "hitokoto"
version = "0.6.0"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "一言 https://hitokoto.cn/."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/hitokoto/"
documentation = "https://docs.rs/hitokoto/"
keywords = ["hitokoto"]

[dependencies]
uuid = { version = "^1.16", optional = true, default-features = false }
serde = { version = "^1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
rand = { version = "~0.9", optional = true, default-features = false, features = ["os_rng", "small_rng"] }
bitflags = { version = "^2.9", optional = true, default-features = false }
chrono = { version = "~0.4", optional = true, default-features = false }

[build-dependencies]
anyhow = "^1.0"
tokio = { version = "^1.44", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "~0.12", features = ["json"] }
serde_json = "^1.0"
zip = "^2.6"
serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "^1.16", optional = true, features = ["serde"] }
chrono = { version = "~0.4", optional = true }
lingua = { version = "^1.7", optional = true, default-features = false, features = ["chinese", "english", "french", "german", "japanese", "korean", "spanish"] }

[features]
default = ["std", "random"]
std = ["uuid?/std", "serde?/std", "rand?/thread_rng", "bitflags?/std", "chrono?/std"]
uuid = ["dep:uuid"]
serde = ["dep:serde", "uuid?/serde", "chrono?/serde"]
random = ["dep:rand", "dep:bitflags"]
time = ["dep:chrono"]
language = ["dep:lingua"]
language-full = ["language", "lingua/default"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
